transcoding to "in24" causes infinite loop
The transcode task just gets stuck. This must be some poorly handled mapping of audio FOURCC; specifying "s24b" works just fine.
The transcode task just gets stuck. This must be some poorly handled mapping of audio FOURCC; specifying "s24b" works just fine.
added Component::Stream output: Encoders Severity::minor Type::bug Version::master git + 1 deleted label
changed milestone to %Bugs paradize
commit 5b227602 Author: Ilkka Ollakka ileoo@videolan.org Date: Sat Jan 4 15:09:47 2014 +0200
transcode: handle acodec aliases properly
Get correct fourcc for i_acodec instead creating fourcc directly from
user input.
Fixes [#9755](https://code.videolan.org/videolan/vlc/-/issues/9755)
Original author: ileoo@videolan.org
added Status::fixed label
closed
changed milestone to %2.2.x maintenance branch
VideoLAN code repository instance