transcode: handle acodec aliases properly

Get correct fourcc for i_acodec instead creating fourcc directly from
user input.

Fixes #9755